Populate the pie chart and its categories with startup data and on each category change